--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ body,
     border: 1px solid var(--dark-grey);
 }
 
-.hintButton.guessLetter::after {
+.hintRequired.guessLetter::after {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     content: "\f071";
@@ -94,6 +94,7 @@ body,
     text-align: center;
     background-color: var(--light-grey);
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .key-backspace {
@@ -111,11 +112,6 @@ body,
 .hint-correct {
     background-color: var(--dark-green);
 }
-
-.hint-required {
-    color: var(--dark-red);
-}
-
 
 .suggestion {
     display: flex;
