--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ body,
     aspect-ratio: 1 / 1;
     text-align: center;
     border: 1px solid var(--dark-grey);
+    cursor: pointer;
 }
 
 .hintRequired.guessLetter::after {
