--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,7 @@ body,
 
 .guess {
     display: flex;
+    user-select: none;
 }
 
 .guessLetter {
@@ -64,7 +65,7 @@ body,
     text-transform: uppercase;
 }
 
-.guess .guessLetter {
+.guess .guessLetter:not(:empty) {
     cursor: pointer;
 }
 
@@ -101,6 +102,7 @@ body,
     background-color: var(--light-grey);
     border-radius: 5px;
     cursor: pointer;
+    user-select: none;
 }
 
 .key-backspace {
@@ -147,9 +149,99 @@ body,
     background-color: var(--light-grey);
     border-radius: 5px;
     cursor: pointer;
+    user-select: none;
 }
 
 .suggestionButton.disabled {
     opacity: 0.5;
     cursor: unset;
+}
+
+.modal {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--bg-color);
+}
+
+.modal.hide {
+    display: none;
+}
+
+.confirmationModal-header {
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-weight: 600;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+    color: var(--dark-red);
+}
+
+.confirmationModal-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    text-align: center;
+    line-height: 1.5rem;
+    margin: 0 1rem;
+}
+
+.confirmationModal-sadFace {
+    font-size: 8rem;
+    color: var(--light-yellow);
+}
+
+.confirmationModal-footer {
+    padding-top: 2rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.confirmationModal-button {
+    font-size: 1.2rem;
+    background-color: var(--bg-color);
+    padding: 1rem;
+    border-radius: 0.2rem;
+    min-width: 8rem;
+    color: var(--text-color);
+    border: 1px solid var(--dark-grey);
+    cursor: pointer;
+    user-select: none;
+}
+
+.confirmationModal-button--danger {
+    background-color: var(--dark-red);
+    color: var(--bg-color);
+}
+
+.exitModal-message {
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-weight: 600;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+    text-align: center;
+    margin: 0 1rem;
+}
+
+.exitModal-happyFace {
+    font-size: 10rem;
+    color: var(--light-yellow);
+    padding-bottom: 2rem;
+}
+
+.exitModal-reconfirm {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 1rem;
+    color: var(--dark-red);
+    cursor: pointer;
 }
